tests/invalid/open_wrong_arg_count/main.py
def run_case() -> None:
    data = open("a.txt", "r", "extra")


if __name__ == "__main__":
    run_case()
